# receiptor

./: .gitignore  README.md  pyproject.toml
receiptor/: __init__.py  receiptor.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/fixtures/: manifest.json
tests/fixtures/text/: address_before_item.txt  item_with_comma.txt  item_with_comma_and_percent.txt  item_with_percent.txt  mixed_case_item.txt  multi_item.txt  multiple_addresses_before_item.txt  valid_item.txt
tests/integration/: test_pdf_pipeline.py
tests/unit/: test_convert_to_float.py  test_create_dataframe.py  test_extract_items.py  test_validate_dataframe.py
