[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receiptor"
version = "0.1.0"
description = "Receipt parser for Brazilian NFCe PDFs"
requires-python = ">=3.10"
dependencies = [
  "pdfplumber>=0.10.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["receiptor*"]
exclude = ["data*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --cov=receiptor --cov-report=term-missing"
markers = [
  "integration: tests that use real PDF files",
  "cli: tests that exercise the command line interface",
  "known_issue: tests that document current parser limitations",
]
